[package]
name = "mtxmx"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "1.1.0"
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
itertools = "0.14.0"
jack = "0.13.0"
log = "0.4.26"
rumqttc = { version = "0.24.0", features = ["url"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "sync"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libjack-jackd2-dev:$CROSS_DEB_ARCH"
]

